# pyOrgan

./: .gitignore  Project Overview.txt  README.md  pyproject.toml  requirements.txt
organ/: organ_pipe.py  organlib.py
organ/generators/: __init__.py  adsr.py  harmonic.py  pipe_generator.py
organ_pipes/: adsr.py  digital_pipe.py  harmonic.py
organ_stops/: organ_pipe.py  organlib.py
organ_stops/generators/: pipe_generator.py
src/: config.py  log_file.py  main.py  organlib.py  ui.py
src/config/: stop_config.py
src/config/stops/: AEOLINE 8'.json
src/config_editors/: __init__.py  stop_config.py
src/gui/: __init__.py  mainwindow.py  stop_editor.py  stopeditor.py
src/gui/stop_editor/: Stop Editor GUI.txt  __init__.py  adsrinfo.py  generalstopeditor.py  harmonicsinfo.py  pipeeditor.py  pipeeditortabs.py  pipeinfo.py  rankinfo.py  stopeditor.py  stopeditortabs.py  stopinfo.py
src/gui/stop_editor/forms/: __init__.py  adsrinfo.py  finetuningtabs.py  harmonicsinfo.py  pipeeditor.py  pipeeditortabs.py  pipeinfo.py  rankinfo.py  stopeditortabs.py  stopinfo.py
src/organ/: organ_pipe.py  organlib.py
src/organ/generators/: __init__.py  adsr.py  harmonic.py  pipe_generator.py
src/organ/stop/: organ_pipe.py  rank.py
src/organ/stops/: pipe.py  rank.py
src/organ/stops/generators/: __init__.py  adsr.py  harmonic.py  harmonic_adsr.py  harmonic_generator.py  pipe.py  pipe_generator.py  sinewave_generator.py
